--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "homepage": "https://joshbrazinski.com",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@react-spring/parallax": "^9.5.0",
@@ -19,10 +19,11 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.1",
     "reactstrap": "^9.1.1",
+    "serve": "^14.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
