--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.12.1",
     "firebaseui": "^6.0.1",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
